--- a/curso-angular4/src/app/app.component.html
+++ b/curso-angular4/src/app/app.component.html
@@ -1,6 +1,5 @@
 <h1>Curso de angular 4</h1>
 <h3>Componente base principal</h3>
 <hr>
-<app-fruta></app-fruta>
-
-<!-- <app-empleado></app-empleado> -->
+<!-- <app-fruta></app-fruta> -->
+<app-empleado></app-empleado>
