--- a/curso-angular4/src/app/components/empleado/empleado.component.html
+++ b/curso-angular4/src/app/components/empleado/empleado.component.html
@@ -1,1 +1,12 @@
-<h1>{{tittle}}</h1>
+<h3>{{titulo}}</h3>
+
+
+<strong>Empleado estrella: {{empleado.nombre}}</strong>
+<ul>
+  <li>{{empleado.nombre}}</li>
+  <li>{{empleado.cargo}}</li>
+  <li>{{empleado.edad}}</li>
+  <li>{{empleado.contratado}}</li>
+</ul>
+
+
