--- a/curso-angular4/src/app/app.component.html
+++ b/curso-angular4/src/app/app.component.html
@@ -1,5 +1,25 @@
 <h1>Curso de angular 4</h1>
 <h3>Componente base principal</h3>
 <hr>
+<nav>
+  <!-- routerLinkActive se le pueden poner clases css para indicar que esta activo -->
+  <a [routerLink]="['/pagina-principal']" [routerLinkActive]="['activado']">
+    Home
+  </a>
+  -
+  <a [routerLink]="['/fruta']" [routerLinkActive]="['activado']">
+    Fruta
+  </a>
+  -
+  <a [routerLink]="['/empleado']" [routerLinkActive]="['activado']">
+    Empleado
+  </a>
+  -
+  <a [routerLink]="['/contacto']" [routerLinkActive]="['activado']">
+    Contacto
+  </a>
+</nav>
+<hr>
 <!-- <app-fruta></app-fruta> -->
-<app-empleado></app-empleado>
+<!-- <app-empleado></app-empleado> -->
+<router-outlet></router-outlet>
