--- a/curso-angular4/src/app/app.component.html
+++ b/curso-angular4/src/app/app.component.html
@@ -22,6 +22,10 @@
   <a [routerLink]="['/contacto']" [routerLinkActive]="['activado']">
     Contacto
   </a>
+  -
+  <a [routerLink]="['/plantillas']" [routerLinkActive]="['activado']">
+    Plantillas
+  </a>
 </nav>
 <hr>
 <!-- <app-fruta></app-fruta> -->
